--- a/src/styles.scss
+++ b/src/styles.scss
@@ -170,3 +170,10 @@ font-family: 'Roboto';
     font-weight: 900;
     src: url('./assets/fonts/roboto-v47-latin-900italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
+
+  html{
+    overflow-x: hidden;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
